One more fix to the word wrap styling of long texts

--- a/app/bundles/CoreBundle/Assets/css/app.css
+++ b/app/bundles/CoreBundle/Assets/css/app.css
@@ -4554,4 +4554,5 @@ table.table > tbody > tr > td.long-text {
   word-break: break-word;
   overflow-wrap: break-word;
   word-wrap: break-word;
+  white-space: normal;
 }
